--- a/index.html
+++ b/index.html
@@ -11,9 +11,32 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/f05b2fe7a7.js" crossorigin="anonymous"></script>
     <title>pretty index HW!</title>
+<style>
+    .btn{
+        border-width: 3px;
+    }
+    .header-carousel-item{
+        height: 450px;
+    }
+    .bg-cover{
+        background-size: cover;
+        background-position: center center;
+    }
+    .carousel-caption{
+        background-color: rgba(0, 0, 0, .5);
+    }
+</style>
 </head>
 
 <body>
+    <div class="bg-secondary py-2">
+        <div class="container text-right ">
+
+            <a href="#" class="text-white mr-1"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
+        </div>
+
+    </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -43,14 +66,51 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <a href="#" class="btn btn-outline-primary mr-2">登入</a>
+                    <a href="#" class="btn btn-outline-primary">註冊</a>
                   </form>
             </div>
         </div>
 
     </nav>
-
+    <div class="header">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item header-carousel-item bg-cover active" style="background-image: url(https://images.unsplash.com/photo-1492683513054-55277abccd99?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=);">
+               
+                <div class="carousel-caption d-none d-md-block px-3">
+                    <h3>F我是文案l1</h3>
+                    <p>N Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, tempore? Magni, veritatis. Sint inventore saepe ipsum eligendi distinctio, libero nostrum laboriosam recusandae soluta optio illo fuga suscipit iste. Cupiditate, fuga!</p>
+                  </div>
+              </div>
+              <div class="carousel-item header-carousel-item bg-cover " style="background-image: url(https://images.unsplash.com/photo-1497668512640-fcbd959e5338?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80&cs=tinysrgb&crop=)">
+                <div class="carousel-caption d-none d-md-block px-3 ">
+                    <h3>F我是文案l2</h3>
+                    <p>N Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, tempore? Magni, veritatis. Sint inventore saepe ipsum eligendi distinctio, libero nostrum laboriosam recusandae soluta optio illo fuga suscipit iste. Cupiditate, fuga!</p>
+                  </div>
+              </div>
+              <div class="carousel-item header-carousel-item bg-cover " style="background-image: url(https://images.unsplash.com/photo-1453831362806-3d5577f014a4?dpr=2&auto=format&fit=crop&w=1500&h=1016&q=80&cs=tinysrgb&crop=)">
+                <div class="carousel-caption d-none d-md-block px-3">
+                    <h3>F我是文案l3</h3>
+                    <p>N Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, tempore? Magni, veritatis. Sint inventore saepe ipsum eligendi distinctio, libero nostrum laboriosam recusandae soluta optio illo fuga suscipit iste. Cupiditate, fuga!</p>
+                  </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+    </div>
+   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
